--- a/.github/workflows/archive.yml
+++ b/.github/workflows/archive.yml
@@ -4,6 +4,9 @@ on:
   schedule:
     - cron: "7 11 * * *"
   workflow_dispatch:
+  push:
+    branches:
+      - fix-failed-cron-job
 
 env:
   CI: true
@@ -38,6 +41,17 @@ jobs:
           restore-keys: |
             ${{ env.PYTHON_VERSION }}-
             pip-
+
+      - name: Check and conditionally remove invalid virtual environment
+        run: |
+          if [ -d ".venv" ] && [ ! -f ".venv/bin/python" ]; then
+            echo "Virtual environment exists but Python executable is missing. Rebuilding."
+            rm -rf .venv
+          elif [ ! -d ".venv" ]; then
+            echo "No virtual environment found. Will build new one."
+          else
+            echo "Virtual environment appears valid. Reusing."
+          fi
 
       - name: Install dependencies
         run: pipenv sync
